--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_list_view__contact">ListView_ContactActivity</string>
+    <string name="title_activity_music_app_demo">MusicAppDemo</string>
 
 </resources>
