--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_list_view__contact">ListView_ContactActivity</string>
     <string name="title_activity_music_app_demo">MusicAppDemo</string>
+    <string name="title_activity_class5_demo">Class5Demo</string>
 
 </resources>
